src/go.parse.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.6 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

import * as AST from './go.ast';
export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<{}> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { root: peg$parseroot };
  let peg$startRuleFunction: () => any = peg$parseroot;

  const peg$c0 = function(first: any, list: any, last: any): any {
        let result: any[] = []
        if (first.content.length > 0) { result.push(first) }
        list.forEach((x: any) => {
          if (x.type != "text" || x.content.length > 0) { result.push(x) }
        })
        if (last.content.length > 0) { result.push(last) }
        return result
      };
  const peg$c1 = function(content: any): any {
        if (content.content.length > 0) {
          return [content]
        } else {
          return []
        }
      };
  const peg$c2 = function(left: any, text: any, right: any): any {
        if (left.trim)  { text.trimLeft  = true }
        if (right.trim) { text.trimRight = true }
        return text
      };
  const peg$c3 = function(text: any, right: any): any {
        if (right.trim) { text.trimRight = true }
        return text
      };
  const peg$c4 = function(left: any, text: any): any {
        if (left.trim)  { text.trimLeft = true }
        return text
      };
  const peg$c5 = "{{-";
  const peg$c6 = peg$literalExpectation("{{-", false);
  const peg$c7 = function(): any { return { trim: true } };
  const peg$c8 = "{{";
  const peg$c9 = peg$literalExpectation("{{", false);
  const peg$c10 = function(): any { return {} };
  const peg$c11 = "-}}";
  const peg$c12 = peg$literalExpectation("-}}", false);
  const peg$c13 = "}}";
  const peg$c14 = peg$literalExpectation("}}", false);
  const peg$c15 = peg$otherExpectation("text");
  const peg$c16 = function(chars: any): any { return withLoc(new AST.Text(chars.join(""))) };
  const peg$c17 = function(char: any): any { return char };
  const peg$c18 = peg$otherExpectation("expression");
  const peg$c19 = function(body: any): any { return body };
  const peg$c20 = "(";
  const peg$c21 = peg$literalExpectation("(", false);
  const peg$c22 = ")";
  const peg$c23 = peg$literalExpectation(")", false);
  const peg$c24 = function(term: any): any { return term };
  const peg$c25 = peg$otherExpectation("with block");
  const peg$c26 = "with";
  const peg$c27 = peg$literalExpectation("with", false);
  const peg$c28 = function(term: any, body: any, elseBody: any): any { return withLoc(new AST.With(term, body, elseBody || [])) };
  const peg$c29 = peg$otherExpectation("if block");
  const peg$c30 = "if";
  const peg$c31 = peg$literalExpectation("if", false);
  const peg$c32 = function(term: any, body: any, elseBody: any): any { return withLoc(new AST.If(term, body, elseBody || [])) };
  const peg$c33 = "else ";
  const peg$c34 = peg$literalExpectation("else ", false);
  const peg$c35 = function(term: any, body: any, elseBody: any): any { return withLoc(new AST.If(term, body, elseBody)) };
  const peg$c36 = peg$otherExpectation("range block");
  const peg$c37 = "range";
  const peg$c38 = peg$literalExpectation("range", false);
  const peg$c39 = function(term: any, body: any, elseBody: any): any { return withLoc(new AST.Range(term, body, elseBody || [])) };
  const peg$c40 = ":=";
  const peg$c41 = peg$literalExpectation(":=", false);
  const peg$c42 = function(value: any, term: any, body: any, elseBody: any): any {
        const node = withLoc(new AST.Range(term, body, elseBody || []))
        node.declareValue = value
        return node
      };
  const peg$c43 = ",";
  const peg$c44 = peg$literalExpectation(",", false);
  const peg$c45 = function(index: any, value: any, term: any, body: any, elseBody: any): any {
        const node = withLoc(new AST.Range(term, body, elseBody || []))
        node.declareIndex = index
        node.declareValue = value
        return node
      };
  const peg$c46 = peg$otherExpectation("block block");
  const peg$c47 = "block";
  const peg$c48 = peg$literalExpectation("block", false);
  const peg$c49 = function(term: any, body: any): any { return withLoc(new AST.Block(term as AST.Any, body as Array<AST.Any>)) };
  const peg$c50 = peg$otherExpectation("block body");
  const peg$c51 = function(first: any, lists: any): any {
        let result: any[] = []
        if (first.content.length > 0) { result.push(first) }
        lists.forEach((list: any[]) => {
          list.forEach((x: any) => {
            if (x.type != "text" || x.content.length > 0) { result.push(x) }
          })
        })
        return result
      };
  const peg$c52 = function(expr: any): any { return expr };
  const peg$c53 = peg$otherExpectation("else");
  const peg$c54 = "else";
  const peg$c55 = peg$literalExpectation("else", false);
  const peg$c56 = peg$otherExpectation("end");
  const peg$c57 = "end";
  const peg$c58 = peg$literalExpectation("end", false);
  const peg$c59 = peg$otherExpectation("variable declaration");
  const peg$c60 = "$";
  const peg$c61 = peg$literalExpectation("$", false);
  const peg$c62 = function(name: any, value: any): any { return withLoc(new AST.Declare(name, value as AST.Any)) };
  const peg$c63 = peg$otherExpectation("variable assignation");
  const peg$c64 = "=";
  const peg$c65 = peg$literalExpectation("=", false);
  const peg$c66 = function(name: any, value: any): any { return withLoc(new AST.Assign(name, value as AST.Any)) };
  const peg$c67 = "";
  const peg$c68 = function(name: any): any { return withLoc(new AST.Variable(name)) };
  const peg$c69 = peg$otherExpectation("pipeline");
  const peg$c70 = "|";
  const peg$c71 = peg$literalExpectation("|", false);
  const peg$c72 = function(first: any, rest: any): any {
      var root = first as AST.Any
      rest.forEach((r: any) => {
        root = withLoc(new AST.Pipe(root as AST.Any, r[3] as AST.Any))
      })
      return root
    };
  const peg$c73 = peg$otherExpectation("pipeline expression");
  const peg$c74 = ".";
  const peg$c75 = peg$literalExpectation(".", false);
  const peg$c76 = function(name: any): any { return name };
  const peg$c77 = function(first: any, names: any): any {
      let root: AST.Any = (first || withLoc(new AST.Root)) as AST.Any
      names.forEach((name: string) => {
        root = withLoc(new AST.Dot(root as AST.Any, name))
      })
      return root
    };
  const peg$c78 = function(target: any, args: any): any {
      if (args.length == 0) {
        return target
      } else {
        return withLoc(new AST.Invoke(target as AST.Any, args as Array<AST.Any>))
      }
    };
  const peg$c79 = function(name: any): any { return withLoc(new AST.Builtin(name)) };
  const peg$c80 = function(): any { return withLoc(new AST.Root()) };
  const peg$c81 = function(chars: any): any { return withLoc(new AST.Invalid(chars.join(""))) };
  const peg$c82 = peg$otherExpectation("identifier");
  const peg$c83 = /^[A-Za-z_]/;
  const peg$c84 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false);
  const peg$c85 = /^[0-9A-Za-z_]/;
  const peg$c86 = peg$classExpectation([["0", "9"], ["A", "Z"], ["a", "z"], "_"], false, false);
  const peg$c87 = function(first: any, rest: any): any { return [first, ...rest].join("") };
  const peg$c88 = peg$otherExpectation("number");
  const peg$c89 = "-";
  const peg$c90 = peg$literalExpectation("-", false);
  const peg$c91 = "+";
  const peg$c92 = peg$literalExpectation("+", false);
  const peg$c93 = function(): any { return withLoc(new AST.Number(parseFloat(text()))) };
  const peg$c94 = /^[eE]/;
  const peg$c95 = peg$classExpectation(["e", "E"], false, false);
  const peg$c96 = /^[0-9]/;
  const peg$c97 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c98 = "0";
  const peg$c99 = peg$literalExpectation("0", false);
  const peg$c100 = /^[1-9]/;
  const peg$c101 = peg$classExpectation([["1", "9"]], false, false);
  const peg$c102 = "\"";
  const peg$c103 = peg$literalExpectation("\"", false);
  const peg$c104 = /^[^"]/;
  const peg$c105 = peg$classExpectation(["\""], true, false);
  const peg$c106 = function(chars: any): any {
      return withLoc(new AST.String(chars.join("")))
    };
  const peg$c107 = "`";
  const peg$c108 = peg$literalExpectation("`", false);
  const peg$c109 = /^[^`]/;
  const peg$c110 = peg$classExpectation(["`"], true, false);
  const peg$c111 = "'";
  const peg$c112 = peg$literalExpectation("'", false);
  const peg$c113 = /^[^']/;
  const peg$c114 = peg$classExpectation(["'"], true, false);
  const peg$c115 = function(chars: any): any {
      return withLoc(new AST.Char(chars.join("")))
    };
  const peg$c116 = peg$otherExpectation("comment");
  const peg$c117 = function(chars: any): any { return withLoc(new AST.Comment(chars.join(""))) };
  const peg$c118 = "/*";
  const peg$c119 = peg$literalExpectation("/*", false);
  const peg$c120 = "*/";
  const peg$c121 = peg$literalExpectation("*/", false);
  const peg$c122 = peg$otherExpectation("whitespace");
  const peg$c123 = /^[ \t\n\r]/;
  const peg$c124 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  const peg$c125 = /^[^\0-\x1F"\\]/;
  const peg$c126 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false);
  const peg$c127 = "\\";
  const peg$c128 = peg$literalExpectation("\\", false);
  const peg$c129 = "/";
  const peg$c130 = peg$literalExpectation("/", false);
  const peg$c131 = "b";
  const peg$c132 = peg$literalExpectation("b", false);
  const peg$c133 = function(): any { return "\b" };
  const peg$c134 = "f";
  const peg$c135 = peg$literalExpectation("f", false);
  const peg$c136 = function(): any { return "\f" };
  const peg$c137 = "n";
  const peg$c138 = peg$literalExpectation("n", false);
  const peg$c139 = function(): any { return "\n" };
  const peg$c140 = "r";
  const peg$c141 = peg$literalExpectation("r", false);
  const peg$c142 = function(): any { return "\r" };
  const peg$c143 = "t";
  const peg$c144 = peg$literalExpectation("t", false);
  const peg$c145 = function(): any { return "\t" };
  const peg$c146 = "u";
  const peg$c147 = peg$literalExpectation("u", false);
  const peg$c148 = function(digits: any): any {
            return String.fromCharCode(parseInt(digits, 16))
          };
  const peg$c149 = function(sequence: any): any { return sequence };
  const peg$c150 = /^[0-9a-f]/i;
  const peg$c151 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseroot(): any {
    let s0;

    s0 = peg$parseroottmpl();
    if (s0 === peg$FAILED) {
      s0 = peg$parseroottextonly();
    }

    return s0;
  }

  function peg$parseroottmpl(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsetextfirst();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsetext();
        if (s4 === peg$FAILED) {
          s4 = peg$parseexpr();
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsetext();
          if (s4 === peg$FAILED) {
            s4 = peg$parseexpr();
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsews();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsetextlast();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseroottextonly(): any {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsetextbody();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsetext(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsetextbegin();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetextbody();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetextend();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextfirst(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsetextbody();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetextend();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextlast(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsetextbegin();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetextbody();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetextend(): any {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c8) {
        s1 = peg$c8;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsetextbegin(): any {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c11) {
      s1 = peg$c11;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c13) {
        s1 = peg$c13;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsetextbody(): any {
    let s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsetextchar();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsetextchar();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c16(s1);
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }

    return s0;
  }

  function peg$parsetextchar(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parsetextend();
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = undefined;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseanychar();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpr(): any {
    let s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesubstbody();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c19(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }

    return s0;
  }

  function peg$parsesubstbody(): any {
    let s0;
